syntax = "proto3";
option csharp_namespace = "acmeat.server.local.manager";

package local;

service GrpcLocal {
  rpc SayHello (HelloRequestClient) returns (HelloReplyClient);
  rpc GetLocalById(Id)returns(Local);
  rpc GetLocals(Id) returns (LocalList);
  rpc CreateLocal(Local) returns(GeneralResponse);
  rpc UpdateLocal(Local) returns (GeneralResponse);
  rpc DeleteLocal(Local) returns (GeneralResponse);
  rpc DeleteLocalById(Local) returns (GeneralResponse);
}

message HelloRequestClient {
  string name = 1;
}

message HelloReplyClient {
  string message = 1;
}

message Id{
  int32 id = 1;
}

message GeneralResponse{
  string message=1;
}

message Local{
  int32 Id=1 ;

  string Name=2 ;

  string OpeningTime=3 ;

  string ClosingTime=4 ;

  string Address=5 ;

  string OpeningDays=6 ;
  bool Available=7 ;
}

message LocalList {
  repeated Local locals=1;
}
